--- a/dcool/src/main/resources/static/css/main.css
+++ b/dcool/src/main/resources/static/css/main.css
@@ -1,13 +1,13 @@
 .dcool_header{
     width: 100%;
     height: 250px;
-    background-color: #000111;
+    background-color: #eeeeee;
 }
 
 .dcool_content{
     width: 100%;
     height: 700px;
-    background-color: #000222;
+    background-color: #dddddd;
 }
 
 .dcool_treil{
