--- a/dcool/src/main/resources/static/css/main.css
+++ b/dcool/src/main/resources/static/css/main.css
@@ -1,3 +1,7 @@
+div{
+    margin: 0px;
+    padding: 0px;
+}
 .dcool_header{
     width: 100%;
     height: 250px;
@@ -6,7 +10,7 @@
 
 .dcool_content{
     width: 100%;
-    height: 700px;
+    height: 800px;
     background-color: #dddddd;
 }
 
