--- a/dcool/src/main/resources/static/css/main.css
+++ b/dcool/src/main/resources/static/css/main.css
@@ -3,6 +3,17 @@ div{
     padding: 0px;
     border-style: none;
 }
+
+/*导航栏*/
+.navbar-fixed-top{
+    height: 90px;
+    padding-top: 15px;
+}
+
+.navbar-fixed-top li{
+    font-size: 15px;
+}
+
 .dcool_header{
     width: 100%;
     height: 250px;
